--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -4,6 +4,11 @@ parameters:
 #    parameter_name: value
 
 services:
+    app.factories.personne_factory:
+        class: AppBundle\factories\PersonneFactory
+        calls:
+            - [create, ['@?']]
+        arguments: ['@doctrine.orm.entity_manager']
 #    service_name:
 #        class: AppBundle\Directory\ClassName
 #        arguments: ["@another_service_name", "plain_value", "%parameter_name%"]
